# netease-music-tui

./: Cargo.toml
src/: app.rs  main.rs
src/ui/: circle.rs  mod.rs
src/util/: mod.rs
