[package]
name = "netease_music_tui"
version = "0.1.5"
authors = ["betta <betta0801@gmail.com>"]
license = "MIT"
keywords = ["netease", "player", "music", "tui"]
repository = "https://github.com/betta-cyber/netease-music-tui"
categories = ["rodio", "music"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {version = "0.18.0", features=["termion"]}
termion = "1.5"
failure = "0.1.6"
reqwest = { version = "0.11.10", features = ["blocking", "cookies", "gzip", "socks"] }
lazy_static = "1.0"
serde = "1.0.101"
serde_derive = "1.0.104"
serde_json = "1.0"
unicode-width = "0.1.5"
config = "0.13.1"
openssl = "0.10.25"
base64 = "0.13.0"
hex = "0.4.0"
num-bigint = "0.4.3"
rand = "0.8.5"
serde_urlencoded = "0.7.1"
chrono = "0.4"
regex = "1.3.1"
simple-logging = "2.0.2"
log = "0.4"
log-panics = "2.0.0"
dirs = "4.0.0"
cpal = "0.13.4"
rodio = { version = "0.15.0"}
tempfile = "3.1.0"
tokio = { version = "1.18.2", features = ["macros"] }
futures = "0.3.1"
bytes = "1.1.0"
byteorder = "1.3"
mp3-duration = "0.1.7"
dbus = { version = "0.9.5", optional = true}

[features]
dbus_mpris = ["dbus"]

[[bin]]
name = "ncmt"
path = "src/main.rs"
